--- a/app/views/superhacks/index.html.erb
+++ b/app/views/superhacks/index.html.erb
@@ -197,7 +197,7 @@
               <%= t("helpers.page.showing") %> <span class="font-semibold text-gray-900 dark:text-white"><%= "#{@pagy.from}-#{@pagy.to}" %></span> <%= t("helpers.page.of") %> <span class="font-semibold text-gray-900 dark:text-white"><%= @pagy.count %></span></span>
       <ul class="inline-flex -space-x-px rtl:space-x-reverse text-sm h-8 list-none">
         <li>
-          <%= link_to t("helpers.page.previous"), hacks_path(params.to_unsafe_h.merge(page: @pagy.prev)),
+          <%= link_to t("helpers.page.previous"), superhacks_path(params.to_unsafe_h.merge(page: @pagy.prev)),
                       {
                         disabled: @pagy.prev.blank?,
                         class: "flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
@@ -206,7 +206,7 @@
         <% @pagy.series.each do |page| %>
           <li>
             <% if page.is_a?(Integer) %>
-              <%= link_to page.to_s, hacks_path(params.to_unsafe_h.merge(page: page)),
+              <%= link_to page.to_s, superhacks_path(params.to_unsafe_h.merge(page: page)),
                           class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" %>
             <% else %>
               <span class="flex items-center justify-center px-3 h-8 text-gray-500">...</span>
@@ -214,7 +214,7 @@
           </li>
         <% end %>
         <li>
-          <%= link_to t("helpers.page.next"), hacks_path(params.to_unsafe_h.merge(page: @pagy.next)),
+          <%= link_to t("helpers.page.next"), superhacks_path(params.to_unsafe_h.merge(page: @pagy.next)),
                       {
                         disabled: @pagy.next.blank?,
                         class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
